[package]
name = "aws-to-b2"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.12"

rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"

serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"

rust-crypto = "0.2.36"
base64 = "0.13.0"